* Fix test failure for people not in Pacific timezone.

cruisecontrol.bat/.sh
----------------------
* Introduce CC_OPTS to easily pass arguments to VM when starting CC. Patch by Arent-Jan Banck.
* Use the right xalan.jar (CC-198). Reported by Carlos Sanchez.

CruiseControlController:
----------------------
* Reload config file if included item is changed (CC-297).

DateUtil
----------------------
* Deprecated millTimeDiffernce in favor of refactored millTimeDifference. Patch by Jerome Lacoste. 

Documentation
----------------------
* Enhanced "getting started" section to incorporate Binary Distribution documentation.
* Added overview page and architecture diagram. Patch by Jerome Lacoste
* Use more of the page width (CC-321). Patch by Jerome Lacoste

EmailPublisher
----------------------
* Fix for bug where committers that also appear in <always> elements are emailed twice. Patch by mathieu.champlon@masagroup.net, with cleanup by Jerome Lacoste.

Jar/War
----------------------
* Includes CruiseControl version number in the archive's manifest file.

JMX:
----------------------
* Add ability to get/set the config file via JMX (CC-220). Patch by Allan Wick

Log
----------------------
* Can preconfigure Log element. Patch by Jerome Lacoste.

MavenBuilder:
----------------------
* Check for required files moved from validation time to "build" time, thereby allowing a bootstrapper to provide the files (CC-25).
* Adds a time attribute to the build node in the build cycle XML log for the maven builder to match ant's behavior and make the UI more consistent accross builders. Patch by Jerome Lacoste, review and fixed by Jamie Bisotti.

NantBuilder
----------------------
* Adds a time attribute to the build node in the build cycle XML log for the maven builder to match ant's behavior and make the UI more consistent accross builders. Patch by Jerome Lacoste.

P4:
----------------------
* Fix problem where test would fail if Perforce was on the path. Patch by Arent-Jan Banck
