@@ -5366,6 +5366,11 @@ endlocal</pre>
                 <td>Mail server address</td>
             </tr>
             <tr>
+                <td>mailport</td>
+                <td>No</td>
+                <td>Mail server port</td>
+            </tr>
+            <tr>
                 <td>username</td>
                 <td>if password is specified</td>
                 <td>Username for smtp server</td>
@@ -5419,6 +5424,12 @@ endlocal</pre>
                 <td>No</td>
                 <td>Prefix for subject line of email. Useful for easily
                 filtering email.</td>
+            </tr>
+            <tr>
+                <td>usessl</td>
+                <td>No</td>
+                <td>"true" to connect to the smtp server using SSL. 
+                Do not forget to set the corresponding mailport.</td>
             </tr>
             </tbody>
         </table>
